# tiralabra-tuning-detector

./: .gitignore  .pylintrc  README.md  mypy.ini  pyproject.toml  tasks.py
docs/: projectspecification.md
docs/progress_reports/: week_1.md  week_2.md
src/: file_reader.py  index.py
