[project]
name = "tuning-detector"
version = "0.1.0"
description = ""
authors = [
    {name = "Veeti Hytönen",email = "veeti.hytonen@gmail.com"}
]
readme = "README.md"
requires-python = "^3.10"
dependencies = [
    "invoke (>=2.2.0,<3.0.0)",
    "numpy (>=2.2.4,<3.0.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.5"
pylint = "^3.3.6"
autopep8 = "^2.3.2"

